fix: update container to node and install python3

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/python:3.6.1
+      - image: circleci/node:8.11.3
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
@@ -29,14 +29,10 @@ jobs:
           - v1-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-      - run: 
-          name: Install Node
-          command: bash ./src/scripts/install-node.sh
-      - run:
-          name: Install Yarn
-          command: sudo npm install -g yarn 
       - run: yarn install
-
+      - run:
+          name: Install Python 2.7
+          command: bash ./src/scripts/install-python3.sh
       - run: 
           name: Install proselint
           command: sudo pip install proselint
